deploy/k8s/overlays/staging/patch-deploy-api-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets-api
spec:
  replicas: 2
